# linux_server_docker

.github/workflows/: ci.yml
docker/: .env  Dockerfile  docker-compose.yml  pyproject.toml
docker/src/: database.py
