[tool.poetry]
name = "KubSU"
version = "0.1.0"
description = "CRUD app for users"
authors = ["you@example.com"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10.2"
fastapi = "0.115.8"
uvicorn = "0.34.0"
sqlalchemy = "2.0.37"
psycopg-binary = "3.2.4"
psycopg = "3.2.4"

[tool.poetry.group.test.dependencies]
pytest = ">=6.2.5"
pytest-asyncio = "0.25.3"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"